File Name: CHANGES

03/08/2022 FASP 2.7.2:
- Fix a bug due the ISNAN macro not recognized by some compilers;
- Use isnan() to replace ISNAN;
- Fix a TeX problem with Doxygen;
- Fix math.lib linkage problem;
- Fix cmake debug mode for Windows;
- Add oneAPI MKL support for Linux;
- Update webpage;
- Update Doxygen.

01/27/2022 FASP 2.7.1:
- Add VS2022 + Intel 2022 oneAPI solution file;
- Fix unused variables and other warnings by oneAPI;
- Update webpage;
- Update Doxygen.

08/14/2021 FASP 2.7.0:
- Update webpage;
- Update warning level in UA AMG;
- Update Doxygen;
- Git becomes public.

05/12/2021 FASP 2.6.8:
- Update README and cmake examples;
- Remove support for VS10 and VS15;
- Update webpage and documentation;
- Update VS19 setting with more aggressive optimization;
- Change README to MarkDown format;
- Update matrix inversion subroutine and give return values.

04/27/2021 FASP 2.6.7:
- Eamon Zhang reported several bugs;
- Fix the bug caused by inversion of smat matrices;
- Fix the bug cuased by uninitialized ILU param;
- Fix other small problems in DEBUG mode;
- Fix a bug in external.cmake for linking to MKL etc.

03/23/2021 FASP 2.6.6:
- Update CMake and add backup target;
- Saving coarse matrices for debugging.

03/13/2021 FASP 2.6.5:
- Fix DEBUG information in SmatInv;
- Fix Windows VS19 OpenMP flag;
- Test OpenMP for icc;
- Rewrite cmake: Replace FASP_SOURCE_DIR with general dir.

03/05/2021 FASP 2.6.4:
- Remove testlib from VS19;
- Add DLL version for Windows;
- Fix DLL version for vscode/cmake/msvc;
- Fix OpenMP version for cmake.

02/13/2021 FASP 2.6.3:
- Remove BLAS from CMake;
- Make CMake work on Windows + VSCode + CMake;
- Fix MSVC flag: _CRT_SECURE_NO_WARNINGS.

02/10/2021 FASP 2.6.2:
- Update output information for UA AMG setup;
- Add decoup_type for choosing decoupling methods in BSR;
- Update test problems in main/test.c;
- Update CMake external packages.

02/05/2021 FASP 2.6.1:
- Add uninstall target to the new CMakeFile.txt;